# cmake_gtest_variations

./: README.md
UnitTesting/intro/: .CMakeLists.txt.swp  CMakeLists.txt  CMakeLists.txt.in  README.txt
UnitTesting/intro/src/: customer.c  main.c  widget.c
UnitTesting/intro/test/: CMakeLists.txt  main.cpp  test_customer.cpp  test_widget.cpp
progressive_cmake/run1_hello_cmake/addLib/: addlib.h.gch
progressive_cmake/run1_hello_cmake/hello_hash_table/: hashtable.c
progressive_cmake/run2_ExampleProject/: CMakeLists.txt
progressive_cmake/run2_ExampleProject/src/: main.cpp
progressive_cmake/run2_ExampleProject/test/: Formula_test.cpp
progressive_cmake/run3_ExampleSeveralLibs/: CMakeLists.txt  Makefile  how_to.txt
progressive_cmake/run3_ExampleSeveralLibs/formula/: CMakeLists.txt  Formula.h
progressive_cmake/run3_ExampleSeveralLibs/src/: CMakeLists.txt
progressive_cmake/run3_ExampleSeveralLibs/test/: CMakeLists.txt  Formula_test.cpp
progressive_cmake/run4_ExampleCmakeGitCloneGTest/: CMakeLists.txt
progressive_cmake/run4_ExampleCmakeGitCloneGTest/src/: main.cpp
progressive_cmake/run4_ExampleCmakeGitCloneGTest/test/: Formula_test.cpp
several_cmakelists/: CMakeLists.txt
several_cmakelists/src/: CMakeLists.txt  main.cpp
several_cmakelists/src/mylib/: mylib.cpp  mylib.h
several_cmakelists/test/: CMakeLists.txt  test.cpp
